# articubot_one

./: .gitignore  CMakeLists.txt  README.md  generate_urdf.sh  launch_vscode.sh  package.xml  setup.cfg  setup.py
articubot_one/launch_utils/: __init__.py  helpers.py  launch_utils.py
assets/maps/: 1106a.yaml  1106b.pgm  1106b.yaml  1106c.pgm  1106c.yaml  1106d.pgm  1106d.yaml  1106e.pgm  1106e.yaml  20251106.yaml  Stormy.data  Stormy.pgm  Stormy.yaml  Study1.pgm  Study1.yaml  large_map.data  large_map.pgm  large_map.yaml  open_area_map.data  open_area_map.pgm  open_area_map.yaml  warehouse.pgm  warehouse.yaml
assets/meshes/: LIDAR_support.stl
assets/models/construction_cone/: model.config  model.sdf
assets/waypoints/: dragger_waypoints.yaml  sim_waypoints.yaml
assets/worlds/: empty_world.sdf  sonoma_racetrack.sdf  test_robot_world.sdf  warehouse.sdf
config/: bno085_i2c.yaml  cartographer_lds_2d.lua  controllers_dragger.yaml  controllers_plucky.yaml  controllers_sim.yaml  dual_ekf_navsat_params.yaml  gz_ros_bridge.yaml  joystick.yaml  main.rviz  map_server_params.yaml  mapper_params_dragger.yaml  mapper_params_online_async.yaml  my_controllers.yaml  nav2_params.yaml  navsat_transform.yaml  sim_waypoints.yaml  twist_mux ORIGINAL.yaml  twist_mux.yaml
description/: JP_camera.xacro  JP_lidar.xacro  README.md  battery.xacro  camera.xacro  common_properties.xacro  depth_camera.xacro  face.xacro  gazebo_control.xacro  gps.xacro  imu.xacro  lidar.xacro  lidar_support.xacro  magnetometer.xacro  robot.urdf  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  sonars.xacro
launch/: bootup_launch.sh  camera.launch.py  cartographer.launch.py  dragger.launch.py  dragger_slam.launch.py  drive.launch.py  drive_sim.launch.py  dual_ekf_navsat.launch.py  ekf_imu_odom.launch.py  ekf_odom.launch.py  joystick.launch.py  launch_nav.launch.py  launch_robot.launch.py  launch_rviz.launch.py  launch_sim.launch.py  launch_sim_nav.launch.py  localization_launch.py  localizers.launch.py  map_server.launch.py  navigation.launch ORIGINAL.py  navigation.launch.py  navigation_launch.py  oakd.launch.py  online_async_launch.py  plucky.launch.py  plucky_slam.launch.py  pluckysens.launch.py  rsp.launch.py  sonars_sim.launch.py  tf_map_odom.launch.py  twist_mux.launch.py
launch/localizers/: amcl.launch.py  cartographer.launch.py  map_server.launch.py  map_server_tf.launch.py  slam_toolbox.launch.py
launch/todo/: ball_tracker.launch.py  mapviz.launch.py  occupancy_grid.launch.py  rplidar.launch.py
log/: latest_list
maps/: empty_map.yaml
robots/dragger/config/: controllers.yaml  dual_ekf_navsat_params.yaml  ekf_navsat_params.yaml  ekf_odom_params.yaml  mapper_params.yaml  nav2_params.yaml  navsat_transform.yaml
robots/dragger/description/: robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
robots/dragger/launch/: dragger.drive.launch.py  dragger.launch.py  dragger.localizers.launch.py  dragger.sensors.launch.py  dragger.sonars.launch.py  dragger_sim.launch.py  dragger_sim_nav.launch.py  dragger_slam_toolbox.launch.py  slam_toolbox.launch.py
robots/stingray/: IndividualSequenceLaunch.txt  IndivitualSequenceLaunch.txt
scripts/: dragger_waypoint_follower.py  gps_waypoint_follower.py  xy_waypoint_follower.py
worlds/: obstacle.world  test_robot_world.sdf
(+130 files in other folders)
