<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>articubot_one</name>
  <version>0.0.1</version>
  <description>ROS2 Indoors and Outdoors Robots - launch and config package</description>
  <maintainer email="slg@quakemap.com">Sergei Grichine</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>xacro</depend>
  <depend>controller_manager</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>gz_ros2_control</depend>
  <depend>topic_tools</depend>
  <depend>twist_mux</depend>
  <depend>robot_localization</depend>
  <depend>imu_tools</depend>
  <depend>slam_toolbox</depend>
  <depend>navigation2</depend>
  <depend>cartographer_ros</depend>
  <depend>rviz_satellite</depend>
  <depend>battery_state_rviz_overlay</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
